--- a/pages/about.html
+++ b/pages/about.html
@@ -62,11 +62,11 @@
                 <nav class="tp-mobile-menu-active">
                     <ul class="">
                         <li><a href="../index.html">Home</a></li>
-                        <li><a href="#">Pricing</a></li>
+                        <li><a href="../index.html#pricing">Pricing</a></li>
                         <li><a href="#">Feature <img src="../assets/img/icons/angle-down-small.svg" alt=""></a>
                             <ul class="rs-submenu bg-[#17181D] rounded-lg p-4 absolute top-[25px] left-0">
                                 <li>
-                                    <a class="bg-[rgba(255,255,255,0.08)] h-[64px] p-3 rounded-lg relative" href="#">
+                                    <a class="bg-[rgba(255,255,255,0.08)] h-[64px] p-3 rounded-lg relative" href="../pages/key-feature.html">
                                         <i
                                             class="w-10 h-10 bg-[rgba(255,255,255,0.08)] inline-block rounded-lg flex items-center justify-center">
                                             <img class="w-content h-content" src="../assets/img/icons/dropdown-05.svg"
@@ -76,7 +76,7 @@
                                     </a>
                                 </li>
                                 <li>
-                                    <a class="bg-[rgba(255,255,255,0.08)] h-[64px] p-3 rounded-lg relative" href="#">
+                                    <a class="bg-[rgba(255,255,255,0.08)] h-[64px] p-3 rounded-lg relative" href="../pages/key-feature.html">
                                         <i
                                             class="w-10 h-10 bg-[rgba(255,255,255,0.08)] inline-block rounded-lg flex items-center justify-center">
                                             <img class="w-content h-content" src="../assets/img/icons/dropdown-04.svg"
@@ -86,7 +86,7 @@
                                     </a>
                                 </li>
                                 <li>
-                                    <a class="bg-[rgba(255,255,255,0.08)] h-[64px] p-3 rounded-lg relative" href="#">
+                                    <a class="bg-[rgba(255,255,255,0.08)] h-[64px] p-3 rounded-lg relative" href="../pages/key-feature.html">
                                         <i
                                             class="w-10 h-10 bg-[rgba(255,255,255,0.08)] inline-block rounded-lg flex items-center justify-center">
                                             <img class="w-content h-content" src="../assets/img/icons/dropdown-03.svg"
@@ -110,7 +110,7 @@
                                     </a>
                                 </li>
                                 <li>
-                                    <a class="bg-[rgba(255,255,255,0.08)] h-[64px] p-3 rounded-lg relative" href="#">
+                                    <a class="bg-[rgba(255,255,255,0.08)] h-[64px] p-3 rounded-lg relative" href="../pages/customization.html">
                                         <i
                                             class="w-10 h-10 bg-[rgba(255,255,255,0.08)] inline-block rounded-lg flex items-center justify-center">
                                             <img class="w-content h-content" src="../assets/img/icons/dropdown-01.svg"
@@ -134,7 +134,7 @@
                                     </a>
                                 </li>
                                 <li>
-                                    <a class="bg-[rgba(255,255,255,0.08)] h-[64px] p-3 rounded-lg relative" href="#">
+                                    <a class="bg-[rgba(255,255,255,0.08)] h-[64px] p-3 rounded-lg relative" href="../pages/customization.html">
                                         <i
                                             class="w-10 h-10 bg-[rgba(255,255,255,0.08)] inline-block rounded-lg flex items-center justify-center">
                                             <img class="w-content h-content" src="../assets/img/icons/dropdown-01.svg"
@@ -154,7 +154,7 @@
                                     </a>
                                 </li>
                                 <li>
-                                    <a class="bg-[rgba(255,255,255,0.08)] h-[64px] p-3 rounded-lg relative" href="#">
+                                    <a class="bg-[rgba(255,255,255,0.08)] h-[64px] p-3 rounded-lg relative" href="../pages/contact-us.html#support-ticket">
                                         <i
                                             class="w-10 h-10 bg-[rgba(255,255,255,0.08)] inline-block rounded-lg flex items-center justify-center">
                                             <img class="w-content h-content" src="../assets/img/icons/dropdown-01.svg"
@@ -165,7 +165,7 @@
                                 </li>
                                 <li>
                                     <a class="bg-[rgba(255,255,255,0.08)] h-[64px] p-3 rounded-lg relative !justify-center"
-                                        href="#">
+                                        href="../pages/key-feature.html">
                                         All Product
                                     </a>
                                 </li>
@@ -260,11 +260,11 @@
                 <nav>
                     <ul class="flex items-center gap-6">
                         <li><a href="../index.html">Home</a></li>
-                        <li><a href="#pricing">Pricing</a></li>
-                        <li><a href="#feature">Feature<img src="../assets/img/icons/angle-down-small.svg" alt=""></a>
+                        <li><a href="../index.html#pricing">Pricing</a></li>
+                        <li><a href="../pages/key-feature.html">Feature<img src="../assets/img/icons/angle-down-small.svg" alt=""></a>
                             <ul class="rs-submenu bg-[#17181D] rounded-lg p-4 absolute top-[25px] left-0">
                                 <li>
-                                    <a class="bg-[rgba(255,255,255,0.08)] h-[64px] p-3 rounded-lg relative" href="#">
+                                    <a class="bg-[rgba(255,255,255,0.08)] h-[64px] p-3 rounded-lg relative" href="../pages/key-feature.html">
                                         <i
                                             class="w-10 h-10 bg-[rgba(255,255,255,0.08)] inline-block rounded-lg flex items-center justify-center">
                                             <img class="w-content h-content" src="../assets/img/icons/dropdown-05.svg"
@@ -274,7 +274,7 @@
                                     </a>
                                 </li>
                                 <li>
-                                    <a class="bg-[rgba(255,255,255,0.08)] h-[64px] p-3 rounded-lg relative" href="#">
+                                    <a class="bg-[rgba(255,255,255,0.08)] h-[64px] p-3 rounded-lg relative" href="../pages/key-feature.html">
                                         <i
                                             class="w-10 h-10 bg-[rgba(255,255,255,0.08)] inline-block rounded-lg flex items-center justify-center">
                                             <img class="w-content h-content" src="../assets/img/icons/dropdown-04.svg"
@@ -284,7 +284,7 @@
                                     </a>
                                 </li>
                                 <li>
-                                    <a class="bg-[rgba(255,255,255,0.08)] h-[64px] p-3 rounded-lg relative" href="#">
+                                    <a class="bg-[rgba(255,255,255,0.08)] h-[64px] p-3 rounded-lg relative" href="../pages/key-feature.html">
                                         <i
                                             class="w-10 h-10 bg-[rgba(255,255,255,0.08)] inline-block rounded-lg flex items-center justify-center">
                                             <img class="w-content h-content" src="../assets/img/icons/dropdown-03.svg"
@@ -310,7 +310,7 @@
                                     </a>
                                 </li>
                                 <li>
-                                    <a class="bg-[rgba(255,255,255,0.08)] h-[64px] p-3 rounded-lg relative" href="#">
+                                    <a class="bg-[rgba(255,255,255,0.08)] h-[64px] p-3 rounded-lg relative" href="../pages/customization.html">
                                         <i
                                             class="w-10 h-10 bg-[rgba(255,255,255,0.08)] inline-block rounded-lg flex items-center justify-center">
                                             <img class="w-content h-content" src="../assets/img/icons/dropdown-01.svg"
@@ -335,7 +335,7 @@
                                     </a>
                                 </li>
                                 <li>
-                                    <a class="bg-[rgba(255,255,255,0.08)] h-[64px] p-3 rounded-lg relative" href="#">
+                                    <a class="bg-[rgba(255,255,255,0.08)] h-[64px] p-3 rounded-lg relative" href="../pages/customization.html">
                                         <i
                                             class="w-10 h-10 bg-[rgba(255,255,255,0.08)] inline-block rounded-lg flex items-center justify-center">
                                             <img class="w-content h-content" src="../assets/img/icons/dropdown-01.svg"
@@ -355,7 +355,7 @@
                                     </a>
                                 </li>
                                 <li>
-                                    <a class="bg-[rgba(255,255,255,0.08)] h-[64px] p-3 rounded-lg relative" href="#">
+                                    <a class="bg-[rgba(255,255,255,0.08)] h-[64px] p-3 rounded-lg relative" href="#support-ticket">
                                         <i
                                             class="w-10 h-10 bg-[rgba(255,255,255,0.08)] inline-block rounded-lg flex items-center justify-center">
                                             <img class="w-content h-content" src="../assets/img/icons/dropdown-01.svg"
@@ -366,7 +366,7 @@
                                 </li>
                                 <li>
                                     <a class="bg-[rgba(255,255,255,0.08)] h-[64px] p-3 rounded-lg relative justify-center"
-                                        href="#">
+                                        href="../pages/key-feature.html">
                                         All Product
                                     </a>
                                 </li>
@@ -638,7 +638,7 @@
         </section>
 
         <!-- need-help -->
-        <section class="need-help relative overflow-hidden pt-[80px]">
+        <section id="support-ticket" class="need-help relative overflow-hidden pt-[80px]">
             <div class="max-w-2lg mx-auto px-4  pb-[80px]">
                 <div class="grid grid-cols-12 gap-10">
                     <div class="col-span-12 lg:col-span-6">
@@ -714,10 +714,10 @@
                     <div class="rs-footer-widget-1 rs-footer-menu">
                         <h3 class="text-lg font-semibold leading-[144%] mb-3">Company</h3>
                         <ul>
-                            <li><a href="#">About Us</a></li>
-                            <li><a href="#">Contact Us</a></li>
+                            <li><a href="../pages/about.html">About Us</a></li>
+                            <li><a href="../pages/contact-us.html">Contact Us</a></li>
                             <li><a href="#">Blog</a></li>
-                            <li><a href="#">Service Policy</a></li>
+                            <li><a href="../index.html#service">Service Policy</a></li>
                             <li><a href="#">Terms & Conditions</a></li>
                         </ul>
                     </div>
@@ -727,10 +727,10 @@
                         <h3 class="text-lg font-semibold leading-[144%] mb-3">Quick Links</h3>
                         <ul>
                             <li><a href="#">Software Demo</a></li>
-                            <li><a href="#">Installation/Service</a></li>
-                            <li><a href="#">Customisation</a></li>
+                            <li><a href="../index.html">Installation/Service</a></li>
+                            <li><a href="../pages/customization.html">Customisation</a></li>
                             <li><a href="#">Documentation</a></li>
-                            <li><a href="#">Support Ticket</a></li>
+                            <li><a href="../pages/contact-us.html#support-ticket">Support Ticket</a></li>
                         </ul>
                     </div>
                 </div>
