--- a/pages/privacy-policy.html
+++ b/pages/privacy-policy.html
@@ -201,10 +201,10 @@
                 <h3 class="tp-offcanvas-social-title mb-4">
                     follow us
                 </h3>
-                <a href="javascript:void(0)"><i class="fab fa-facebook-f"></i></a>
-                <a href="javascript:void(0)"><i class="fab fa-twitter"></i></a>
-                <a href="javascript:void(0)"><i class="fab fa-linkedin-in"></i></a>
-                <a href="javascript:void(0)"><i class="fab fa-instagram"></i></a>
+                <a href="https://www.facebook.com/razinsoft"><i class="fab fa-facebook-f"></i></a>
+                <a href="https://www.youtube.com/"><i class="fa-brands fa-youtube"></i></a>
+                <a href="https://bd.linkedin.com/company/razinsoft"><i class="fab fa-linkedin-in"></i></a>
+                <a href="tel:+8801937203743"><i class="fa-brands fa-whatsapp"></i></a>
             </div>
         </div>
     </div>
@@ -541,28 +541,28 @@
                         Elevate Your Business with Innovative
                         Web, App, and Software <br> Solutions. Partner for Excellence in Tech.
                     </p>
-                    <a class="flex items-center gap-4 text-sm font-light mb-3" href="mailto:support@razinsoft.com">
+                    <a class="flex items-center gap-4 text-sm font-light mb-3 hover:underline transition duration-300" href="mailto:support@razinsoft.com">
                         <img src="../assets/img/icons/envelope.svg" alt="">
                         support@razinsoft.com
                     </a>
-                    <a class="flex items-center gap-4 text-sm font-light mb-3" href="tel:+8801937203743">
+                    <a class="flex items-center gap-4 text-sm font-light mb-3 hover:underline transition duration-300" href="tel:+8801937203743">
                         <img src="../assets/img/icons/phone.svg" alt="">
                         +8801937203743
                     </a>
                     <div class="rs-social-icon flex items-center gap-4">
-                        <a href="#"
+                        <a href="tel:+8801937203743"
                             class="w-8 h-8 backdrop-blur-[6.4px] bg-[rgba(246,247,249,0.24)] rounded-[6px] flex items-center justify-center"><img
                                 class="w-content h-content" src="../assets/img/icons/Social-01.svg" alt="">
                         </a>
-                        <a href="#"
+                        <a href="https://www.youtube.com/"
                             class="w-8 h-8 backdrop-blur-[6.4px] bg-[rgba(246,247,249,0.24)] rounded-[6px] flex items-center justify-center"><img
                                 class="w-content h-content ml-[2px]" src="../assets/img/icons/youtube.svg" alt="">
                         </a>
-                        <a href="#"
+                        <a href="https://bd.linkedin.com/company/razinsoft"
                             class="w-8 h-8 backdrop-blur-[6.4px] bg-[rgba(246,247,249,0.24)] rounded-[6px] flex items-center justify-center"><img
                                 class="w-content h-content" src="../assets/img/icons/linkin.svg" alt="">
                         </a>
-                        <a href="#"
+                        <a href="https://www.facebook.com/razinsoft"
                             class="w-8 h-8 backdrop-blur-[6.4px] bg-[rgba(246,247,249,0.24)] rounded-[6px] flex items-center justify-center"><img
                                 class="w-content h-content" src="../assets/img/icons/facebook.svg" alt="">
                         </a>
@@ -575,8 +575,8 @@
                             <li><a href="../pages/about.html">About Us</a></li>
                             <li><a href="../pages/contact-us.html">Contact Us</a></li>
                             <li><a href="#">Blog</a></li>
-                            <li><a href="../index.html#service">Service Policy</a></li>
-                            <li><a href="#">Terms & Conditions</a></li>
+                            <li><a href="../pages/privacy-policy.html">Privacy Policy</a></li>
+                            <li><a href="../pages/terms&conditions.html">Terms & Conditions</a></li>
                         </ul>
                     </div>
                 </div>
@@ -623,7 +623,7 @@
                         <div class="rs-footer-icon flex items-center justify-center gap-4">
                             <a href="#" class="bg-white h-[40px] w-[164px] rounded-lg flex items-center justify-center">
                                 <img class="h-content w-content"
-                                    src="../assets/img/icons/envato-market-codecanyon-logo-1.svg" alt="">
+                                    src="../assets/img/icons/Razinsoft-logo-01.svg" alt="">
                             </a>
                             <a href="#" class="bg-white h-[40px] w-[164px] rounded-lg flex items-center justify-center">
                                 <img class="h-content w-content" src="../assets/img/icons/envato-2.svg" alt="">
